# soundON

./: CMakeLists.txt  LICENSE  README.md  main.cpp
resources/levels/shiver/: model.glb
resources/shaders/glsl100/: bloom.fs  blur.fs
resources/shaders/glsl330/: bloom.fs  blur.fs
scripts/: level.srt  make.py
src/: config.hpp  events.cpp  events.hpp  game.cpp  game.hpp  level.hpp  level_data.hpp  level_provider.cpp  level_provider.hpp  main.cpp  mark.cpp  mark.hpp  score.hpp
src/drawables/: arrows.hpp  game_logo.cpp  game_logo.hpp  level_background.cpp  level_background.hpp  song_info.cpp  song_info.hpp
src/screens/: base_screen.hpp  level_screen.cpp  level_screen.hpp  level_screen2.cpp  level_screen2.hpp  menu_screen.cpp  menu_screen.hpp
test/: main.cpp
web/: index.html
